--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(HashStrings)
 
-set(CMAKE_CXX_STANDARD 14)
+set( CMAKE_C_STANDARD 11 )
+set( CMAKE_C_FLAGS    "-Wall -Wextra" )
 
 include_directories(.)
 
@@ -10,3 +11,6 @@ add_executable( hashstrings
         argtable3.c    argtable3.h )
 
 target_link_libraries( hashstrings m config )
+
+set( CMAKE_INSTALL_PREFIX /usr )
+install( TARGETS hashstrings )
