--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libdict"]
-	path = libdict
-	url = git@github.com:paul-chambers/libdict.git
+[submodule "btree.c"]
+	path = btree.c
+	url = git@github.com:paul-chambers/btree.c.git
